fixed some footer spacing issues

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -50,7 +50,8 @@ footer {
     footer {
         .footer-box {
             .dt-about-box {
-                display: block;
+                display: flex;
+                justify-content: flex-start;
                 margin-left: 0 4vw;
                 width: 15vw;
 
@@ -62,9 +63,9 @@ footer {
             }
 
             .mob-name-box {
-                justify-content: center;
                 flex-direction: row;
-                width: 60vw;
+                justify-content: center;
+                width: auto;
 
                 a {
                     font-size: 15px;
@@ -74,6 +75,7 @@ footer {
 
             .mob-repo-box {
                 width: 15vw;
+                margin: 0 2vw;
             }
         }
     }
@@ -93,6 +95,9 @@ footer {
                     font-size: 20px;
                     
                 }
+            }
+            .mob-repo-box {
+                margin: 0;
             }
         }
     }
