--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -128,7 +128,7 @@ body {
 
 @media (min-width: 1200px) {
     .home-box {
-        width: 30vw;
+        width: 32vw;
         height: 50vh;
     }
 }
